<resources>
    <string name="app_name">مرشدك الزراعي</string>
    <string name="subscribe_in_fiber_opt">Subscribe in fiber optical high speed internet service</string>
    <string name="order_now">Order Now</string>
    <string name="continue_order">Continue</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="neighbor">Neighborhood</string>
    <string name="where_install">Where to Install</string>
    <string name="proceed">Proceed</string>
    <string name="choose_fiber_box">Choose Fiber Box</string>
    <string name="choose_city">Choose city</string>
    <string name="first_name_required">First Name is required</string>
    <string name="last_name_required">Last name is required</string>
    <string name="phone_required">Phone number is required</string>
    <string name="city_required">City is required</string>
    <string name="neighbor_required">Neighbor is required</string>
    <string name="location_required">Location is required</string>
    <string name="change_language">Change Language</string>
    <string name="contact_us">Contact Us</string>
    <string name="success_msg">We received your order and will contact you soon</string>
    <string name="fastest_internet">Fastest Internet in The Kingdom</string>
    <string name="success_desc">On it\'s way, our representative will contact you</string>
    <string name="back_main">Back to Main Menu</string>
    <string name="high_speed">high speed internet service</string>
    <string name="looking_for">What are you looking for?</string>
    <string name="about_us">About Us</string>
    <string name="terms">Terms and Conditions</string>
    <string name="language">Language</string>
    <string name="contact_support">Contact Support</string>
    <string name="whats_app">WhatsApp</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot your password</string>
    <string name="welcome">Welcome to your</string>
    <string name="welcome_2">agricultural guide</string>
    <string name="agri_notebook">Agricultural Notebook</string>
    <string name="read_more">Read more…</string>
    <string name="show_all">Show all</string>
    <string name="vision">All rights reserved</string>
    <string name="agri_calender">Agricultural Calendar</string>
    <string name="register_user">Register User</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="unable_to_login" translatable="false">Unable to login</string>
    <string name="logout">Logout</string>
    <string name="Category" />
    <string name="Consultants" />
    <string name="consultants">Conversations</string>
    <string name="category">Agricultural Guides</string>
    <string name="groups">Groups</string>
    <string name="enter_verfication_code">Enter the verification code sent to</string>
    <string name="code" translatable="false">code</string>
    <string name="sms_verfication">SMS Verification</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="area">Location</string>
    <string name="country">Country</string>
    <string name="save">Save</string>
    <string name="verify">Verify</string>
    <string name="contact_us_details">Follow us on</string>
    <string name="attachment" translatable="false">Attachment</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="img_transition">img_transition</string>
    <string name="title_activity_maps">Map</string>
    <string name="typing">Typing…</string>
    <string name="recording">Recording…</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_profile">Profile</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="key_autodownload_roaming" translatable="false">key_autodownload_roaming</string>
    <string name="key_autodownload_wifi" translatable="false">key_autodownload_wifi</string>
    <string name="key_autodownload_cellular" translatable="false">key_autodownload_cellular</string>
    <string name="pref_header_chat">Chat</string>
    <string name="pref_header_about">About</string>
    <string name="camera_tip">Tap to Take a Photo,Hold to Record Video</string>
    <string name="audio_permission_error">Audio Permissions are Missing</string>
    <string name="space_or_permissions_error_toast">Error :( ,Please check Space or Permissions</string>
    <string name="voice_message_is_short_toast">Voice Message is Too Short</string>
    <string name="file_is_too_big">file is Too BIG</string>
    <string name="type_not_supported">type not supported!</string>
    <string name="unblock_contact">Unblock Contact</string>
    <string name="block_contact">Block Contact</string>
    <string name="unmute_notifications">UnMute Notifications</string>
    <string name="mute_notifications">Mute Notifications</string>
    <string name="loading">Loading..</string>
    <string name="copied_to_clipboard">Copied To Clipboard…</string>
    <string name="image_video_not_found">CHOSEN IMAGE/Video Not Found</string>
    <string name="sending_messages">Sending Messages…</string>
    <string name="message_is_too_long">Message is Too long please try to reduce it</string>
    <string name="error_playing_this">Error playing this :(</string>
    <string name="cannot_open_this_file">cannot open this file</string>
    <string name="checking">Checking..</string>
    <string name="does_not_have_fireapp">does not have %s</string>
    <string name="user_is_blocked">User is Blocked</string>
    <string name="unblock">UnBlock</string>
    <string name="cancel">إلغاء</string>
    <string name="not_contact_selected">No Contact Selected</string>
    <string name="missing_permissions">Missing Permissions</string>
    <string name="ok">OK</string>
    <string name="no_close_the_app">NO Close The App</string>
    <string name="you_have_to_grant_permissions">You have to grant permissions in order to use this App</string>
    <string name="confirmation">Confirmation</string>
    <string name="delete_conversation_confirmation">Are you sure you want to delete this conversation?</string>
    <string name="yes">نعم</string>
    <string name="select_contact">Select Contact</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="image_changed">Image has been changed</string>
    <string name="username_is_empty">user name cannot be empty</string>
    <string name="default_status">Heeey I am using %s!</string>
    <string name="reply">Reply</string>
    <string name="choose_number">Choose a Number</string>
    <string name="delete_messages_confirmation">Delete Message?</string>
    <string name="you">You</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_status">Enter your status</string>
    <string name="status_is_empty">Status is Empty</string>
    <string name="no_media_summary">no media</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="files">Files</string>
    <string name="no">لا</string>
    <string name="file">File</string>
    <string name="camera">كاميرا</string>
    <string name="gallery">معرض الصور</string>
    <string name="audio">Audio</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="media">Media</string>
    <string name="count">Count</string>
    <string name="about_and_phone_number">About and phone number</string>
    <string name="delete">حذف</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="share">Share</string>
    <string name="add_to_contacts">Add to Contacts</string>
    <string name="edit">تعديل</string>
    <string name="checking_contact">Checking Contact</string>
    <string name="online">Online</string>
    <string name="could_not_get_audio_file">could not get audio file</string>
    <string name="could_not_get_this_image">Could not get this image</string>
    <string name="delete_media_from_phone">Delete Media From Phone</string>
    <string name="media_player_error">file not found or permissions missing</string>
    <string name="select_numbers">Select Numbers</string>
    <string name="contact_info">Contact Info</string>
    <string name="not_found">Not found</string>
    <string name="enter_is_sent_smmary">Enter is Send</string>
    <string name="enter_is_send_title">Enter key will send your message</string>
    <string name="mobile_data_title">when using mobile data</string>
    <string name="roaming_title">when roaming</string>
    <string name="wifi_title">when using Wifi</string>
    <string name="media_auto_download_title">Media auto download</string>
    <string name="could_not_get_this_file">could not get this file</string>
    <string name="send_to_toolbar_title">Send To ..</string>
    <string name="item_deleted_from_storage">this item was deleted from your storage</string>
    <string name="app_info">لزراعة أفضل </string>
    <string name="feedback">Feedback</string>
    <string name="choose_email_app">Choose Email App</string>
    <string name="new_group">New Group</string>
    <string name="add_participants">Add Participants</string>
    <string name="max_number_of_users_reached">Max Number of users reached</string>
    <string name="account">حسابي</string>
    <string name="notifications">الإشعارات</string>
    <string name="pest_detection">Pest Detection</string>
    <string name="consultation">الخدمات</string>
    <string name="market">السوق</string>
    <string name="home">الرئيسية</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="profile">الملف الشخصي</string>
    <string name="image">صورة</string>
    <string name="soil">التربة</string>
    <string name="sample_number">رقم العينة</string>
    <string name="electric_conductivity">التوصيل الكهربائي</string>
    <string name="PH">الاس الهيدروجيني</string>
    <string name="carbonate">كربونات</string>
    <string name="potassium">بوتاسيوم</string>
    <string name="phosphorous">فوسفور</string>
    <string name="sand">رمل</string>
    <string name="celt">سلت</string>
    <string name="clay">طين</string>
    <string name="texture_type">نوع القوام</string>
    <string name="notes">ملاحظات</string>
    <string name="recommendations">توصيات</string>
    <string name="water">المياه</string>
    <string name="electric_water">توصيل المياه الكهربائي</string>
    <string name="water_PH">مياه الأس الهيدروجيني</string>
    <string name="water_chloride">كلوريد الماء</string>
    <string name="water_carbonate">كربونات الماء</string>
    <string name="water_salt">أملاح الماء</string>
    <string name="water_recommend">توصيات المياه</string>
    <string name="water_notes">ملاحظات على المياه</string>
    <string name="back">رجوع</string>
    <string name="services">الخدمات</string>
    <string name="my_appointments">مواعيدي</string>
    <string name="search_city">البحث عن المدينة</string>
    <string name="search_skill">البحث عن تخصص</string>
    <string name="select_skill_header_title">ما هو التخصص الذي ترغب بالسؤال عنه</string>
    <string name="select_skill_header_subtitle">تحديد التخصص المناسب سوف يساعدنا على اختيار المرشد المناسب لتقديم الاستشارة</string>
    <string name="pdf_report">التقرير pdf</string>
</resources>