<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/outline_home_24"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/services"
        android:enabled="true"
        android:icon="@drawable/list_dropdown"
        android:title="@string/services"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/my_appointments"
        android:enabled="true"
        android:icon="@drawable/outline_calendar_month_24"
        android:title="@string/my_appointments"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/notification"
        android:enabled="true"
        android:icon="@drawable/outline_notifications_none_24"
        android:title="@string/notifications"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/baseline_person_outline_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />





    <!--    <item-->
<!--        android:id="@+id/notification"-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/inactive_notification"-->
<!--        android:title="@string/notifications"-->
<!--        app:showAsAction="ifRoom" />-->


</menu>