<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_city"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivChild"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/back"
            android:src="@drawable/arrow_left" />

        <TextView
            android:id="@+id/dropdown"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/choose_fiber_box"
            android:textColor="#141414"
            android:textSize="@dimen/text_size_title_2" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/ivCheck"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_check" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />
</LinearLayout>